runtime/Php/test/Antlr/Tests/generated/t033backtrackingParser.php
<?php
// $ANTLR 3.2 Sep 23, 2009 12:02:23 runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g 2010-09-10 19:39:36


use Antlr\Runtime\IntStream;
use Antlr\Runtime\DFA;
use Antlr\Runtime\Parser;
use Antlr\Runtime\Lexer;
use Antlr\Runtime\CommonToken;
use Antlr\Runtime\Set;
use Antlr\Runtime\Token;
use Antlr\Runtime\CharStream;
use Antlr\Runtime\RecognizerSharedState;
use Antlr\Runtime\ParserRuleReturnScope;

use Antlr\Runtime\EarlyExitException;
use Antlr\Runtime\FailedPredicateException;
use Antlr\Runtime\MismatchedRangeException;
use Antlr\Runtime\MismatchedSetException;
use Antlr\Runtime\MismatchedTokenException;
use Antlr\Runtime\NoViableAltException;
use Antlr\Runtime\RecognitionException;
use Antlr\Runtime\UnwantedtokenException;

class t033backtrackingParser extends Parser {
    public static $tokenNames = array(
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENTIFIER", "LETTER", "EscapeSequence", "CHARACTER_LITERAL", "STRING_LITERAL", "HexDigit", "IntegerTypeSuffix", "HEX_LITERAL", "DECIMAL_LITERAL", "OCTAL_LITERAL", "Exponent", "FloatTypeSuffix", "FLOATING_POINT_LITERAL", "OctalEscape", "UnicodeEscape", "WS", "COMMENT", "LINE_COMMENT", "LINE_COMMAND", "'typedef'", "';'", "','", "'extern'", "'static'", "'auto'", "'register'", "'void'", "'char'", "'short'", "'int'", "'long'", "'float'", "'double'", "'signed'", "'unsigned'", "'const'", "'volatile'", "'('", "')'", "'['", "']'", "'*'", "'{'"
    );
    public $T__29=29;
    public $T__28=28;
    public $T__27=27;
    public $T__26=26;
    public $T__25=25;
    public $FloatTypeSuffix=15;
    public $T__24=24;
    public $T__23=23;
    public $LETTER=5;
    public $Exponent=14;
    public $EOF=-1;
    public $HexDigit=9;
    public $STRING_LITERAL=8;
    public $FLOATING_POINT_LITERAL=16;
    public $IDENTIFIER=4;
    public $HEX_LITERAL=11;
    public $COMMENT=20;
    public $T__42=42;
    public $T__43=43;
    public $T__40=40;
    public $T__41=41;
    public $T__46=46;
    public $T__44=44;
    public $T__45=45;
    public $LINE_COMMENT=21;
    public $IntegerTypeSuffix=10;
    public $CHARACTER_LITERAL=7;
    public $OCTAL_LITERAL=13;
    public $T__30=30;
    public $T__31=31;
    public $T__32=32;
    public $T__33=33;
    public $WS=19;
    public $T__34=34;
    public $T__35=35;
    public $T__36=36;
    public $T__37=37;
    public $T__38=38;
    public $T__39=39;
    public $UnicodeEscape=18;
    public $LINE_COMMAND=22;
    public $EscapeSequence=6;
    public $DECIMAL_LITERAL=12;
    public $OctalEscape=17;

    // delegates
    // delegators

    protected $Symbols_scope = array(
        "types" => "",
    );
    protected $Symbols_stack = array();


    static public $FOLLOW_external_declaration_in_translation_unit75 = array(1 => 1, 4 => 4, 23 => 23, 26 => 26, 27 => 27, 28 => 28, 29 => 29, 30 => 30, 31 => 31, 32 => 32, 33 => 33, 34 => 34, 35 => 35, 36 => 36, 37 => 37, 38 => 38, 39 => 39, 40 => 40, 41 => 41, 45 => 45);
    static public $FOLLOW_function_definition_in_external_declaration111 = array(1 => 1);
    static public $FOLLOW_declaration_in_external_declaration116 = array(1 => 1);
    static public $FOLLOW_declaration_specifiers_in_function_definition138 = array(4 => 4, 26 => 26, 27 => 27, 28 => 28, 29 => 29, 30 => 30, 31 => 31, 32 => 32, 33 => 33, 34 => 34, 35 => 35, 36 => 36, 37 => 37, 38 => 38, 39 => 39, 40 => 40, 41 => 41, 45 => 45);
    static public $FOLLOW_declarator_in_function_definition141 = array(1 => 1);
    static public $FOLLOW_23_in_declaration164 = array(4 => 4, 26 => 26, 27 => 27, 28 => 28, 29 => 29, 30 => 30, 31 => 31, 32 => 32, 33 => 33, 34 => 34, 35 => 35, 36 => 36, 37 => 37, 38 => 38, 39 => 39, 40 => 40, 41 => 41, 45 => 45);
    static public $FOLLOW_declaration_specifiers_in_declaration166 = array(4 => 4, 26 => 26, 27 => 27, 28 => 28, 29 => 29, 30 => 30, 31 => 31, 32 => 32, 33 => 33, 34 => 34, 35 => 35, 36 => 36, 37 => 37, 38 => 38, 39 => 39, 40 => 40, 41 => 41, 45 => 45);
    static public $FOLLOW_init_declarator_list_in_declaration174 = array(24 => 24);
    static public $FOLLOW_24_in_declaration176 = array(1 => 1);
    static public $FOLLOW_declaration_specifiers_in_declaration182 = array(4 => 4, 24 => 24, 26 => 26, 27 => 27, 28 => 28, 29 => 29, 30 => 30, 31 => 31, 32 => 32, 33 => 33, 34 => 34, 35 => 35, 36 => 36, 37 => 37, 38 => 38, 39 => 39, 40 => 40, 41 => 41, 45 => 45);
    static public $FOLLOW_init_declarator_list_in_declaration184 = array(24 => 24);
    static public $FOLLOW_24_in_declaration187 = array(1 => 1);
    static public $FOLLOW_storage_class_specifier_in_declaration_specifiers204 = array(1 => 1, 4 => 4, 26 => 26, 27 => 27, 28 => 28, 29 => 29, 30 => 30, 31 => 31, 32 => 32, 33 => 33, 34 => 34, 35 => 35, 36 => 36, 37 => 37, 38 => 38, 39 => 39, 40 => 40);
    static public $FOLLOW_type_specifier_in_declaration_specifiers212 = array(1 => 1, 4 => 4, 26 => 26, 27 => 27, 28 => 28, 29 => 29, 30 => 30, 31 => 31, 32 => 32, 33 => 33, 34 => 34, 35 => 35, 36 => 36, 37 => 37, 38 => 38, 39 => 39, 40 => 40);
    static public $FOLLOW_type_qualifier_in_declaration_specifiers226 = array(1 => 1, 4 => 4, 26 => 26, 27 => 27, 28 => 28, 29 => 29, 30 => 30, 31 => 31, 32 => 32, 33 => 33, 34 => 34, 35 => 35, 36 => 36, 37 => 37, 38 => 38, 39 => 39, 40 => 40);
    static public $FOLLOW_init_declarator_in_init_declarator_list248 = array(1 => 1, 25 => 25);
    static public $FOLLOW_25_in_init_declarator_list251 = array(4 => 4, 26 => 26, 27 => 27, 28 => 28, 29 => 29, 30 => 30, 31 => 31, 32 => 32, 33 => 33, 34 => 34, 35 => 35, 36 => 36, 37 => 37, 38 => 38, 39 => 39, 40 => 40, 41 => 41, 45 => 45);
    static public $FOLLOW_init_declarator_in_init_declarator_list253 = array(1 => 1, 25 => 25);
    static public $FOLLOW_declarator_in_init_declarator266 = array(1 => 1);
    static public $FOLLOW_set_in_storage_class_specifier0 = array(1 => 1);
    static public $FOLLOW_30_in_type_specifier304 = array(1 => 1);
    static public $FOLLOW_31_in_type_specifier309 = array(1 => 1);
    static public $FOLLOW_32_in_type_specifier314 = array(1 => 1);
    static public $FOLLOW_33_in_type_specifier319 = array(1 => 1);
    static public $FOLLOW_34_in_type_specifier324 = array(1 => 1);
    static public $FOLLOW_35_in_type_specifier329 = array(1 => 1);
    static public $FOLLOW_36_in_type_specifier334 = array(1 => 1);
    static public $FOLLOW_37_in_type_specifier339 = array(1 => 1);
    static public $FOLLOW_38_in_type_specifier344 = array(1 => 1);
    static public $FOLLOW_type_id_in_type_specifier351 = array(1 => 1);
    static public $FOLLOW_IDENTIFIER_in_type_id369 = array(1 => 1);
    static public $FOLLOW_set_in_type_qualifier0 = array(1 => 1);
    static public $FOLLOW_pointer_in_declarator451 = array(4 => 4, 41 => 41, 45 => 45);
    static public $FOLLOW_direct_declarator_in_declarator454 = array(1 => 1);
    static public $FOLLOW_pointer_in_declarator459 = array(1 => 1);
    static public $FOLLOW_IDENTIFIER_in_direct_declarator474 = array(1 => 1, 41 => 41, 43 => 43);
    static public $FOLLOW_41_in_direct_declarator485 = array(4 => 4, 26 => 26, 27 => 27, 28 => 28, 29 => 29, 30 => 30, 31 => 31, 32 => 32, 33 => 33, 34 => 34, 35 => 35, 36 => 36, 37 => 37, 38 => 38, 39 => 39, 40 => 40, 41 => 41, 45 => 45);
    static public $FOLLOW_declarator_in_direct_declarator487 = array(42 => 42);
    static public $FOLLOW_42_in_direct_declarator489 = array(1 => 1, 41 => 41, 43 => 43);
    static public $FOLLOW_declarator_suffix_in_direct_declarator503 = array(1 => 1, 41 => 41, 43 => 43);
    static public $FOLLOW_43_in_declarator_suffix521 = array(44 => 44);
    static public $FOLLOW_44_in_declarator_suffix523 = array(1 => 1);
    static public $FOLLOW_41_in_declarator_suffix535 = array(42 => 42);
    static public $FOLLOW_42_in_declarator_suffix537 = array(1 => 1);
    static public $FOLLOW_45_in_pointer548 = array(4 => 4, 26 => 26, 27 => 27, 28 => 28, 29 => 29, 30 => 30, 31 => 31, 32 => 32, 33 => 33, 34 => 34, 35 => 35, 36 => 36, 37 => 37, 38 => 38, 39 => 39, 40 => 40);
    static public $FOLLOW_type_qualifier_in_pointer550 = array(1 => 1, 4 => 4, 26 => 26, 27 => 27, 28 => 28, 29 => 29, 30 => 30, 31 => 31, 32 => 32, 33 => 33, 34 => 34, 35 => 35, 36 => 36, 37 => 37, 38 => 38, 39 => 39, 40 => 40, 45 => 45);
    static public $FOLLOW_pointer_in_pointer553 = array(1 => 1);
    static public $FOLLOW_45_in_pointer559 = array(45 => 45);
    static public $FOLLOW_pointer_in_pointer561 = array(1 => 1);
    static public $FOLLOW_45_in_pointer566 = array(1 => 1);
    static public $FOLLOW_declaration_specifiers_in_synpred2_t033backtracking98 = array(1 => 1);
    static public $FOLLOW_declaration_specifiers_in_synpred4_t033backtracking98 = array(4 => 4, 26 => 26, 27 => 27, 28 => 28, 29 => 29, 30 => 30, 31 => 31, 32 => 32, 33 => 33, 34 => 34, 35 => 35, 36 => 36, 37 => 37, 38 => 38, 39 => 39, 40 => 40, 41 => 41, 45 => 45);
    static public $FOLLOW_declarator_in_synpred4_t033backtracking101 = array(4 => 4, 23 => 23, 26 => 26, 27 => 27, 28 => 28, 29 => 29, 30 => 30, 31 => 31, 32 => 32, 33 => 33, 34 => 34, 35 => 35, 36 => 36, 37 => 37, 38 => 38, 39 => 39, 40 => 40, 41 => 41, 45 => 45, 46 => 46);
    static public $FOLLOW_declaration_in_synpred4_t033backtracking103 = array(4 => 4, 23 => 23, 26 => 26, 27 => 27, 28 => 28, 29 => 29, 30 => 30, 31 => 31, 32 => 32, 33 => 33, 34 => 34, 35 => 35, 36 => 36, 37 => 37, 38 => 38, 39 => 39, 40 => 40, 41 => 41, 45 => 45, 46 => 46);
    static public $FOLLOW_46_in_synpred4_t033backtracking106 = array(1 => 1);
    static public $FOLLOW_declaration_specifiers_in_synpred5_t033backtracking138 = array(1 => 1);
    static public $FOLLOW_declaration_specifiers_in_synpred6_t033backtracking166 = array(1 => 1);
    static public $FOLLOW_type_specifier_in_synpred10_t033backtracking212 = array(1 => 1);
    static public $FOLLOW_pointer_in_synpred27_t033backtracking451 = array(4 => 4, 41 => 41, 45 => 45);
    static public $FOLLOW_direct_declarator_in_synpred27_t033backtracking454 = array(1 => 1);
    static public $FOLLOW_type_qualifier_in_synpred31_t033backtracking550 = array(1 => 1);
    static public $FOLLOW_pointer_in_synpred32_t033backtracking553 = array(1 => 1);
    static public $FOLLOW_45_in_synpred33_t033backtracking548 = array(4 => 4, 26 => 26, 27 => 27, 28 => 28, 29 => 29, 30 => 30, 31 => 31, 32 => 32, 33 => 33, 34 => 34, 35 => 35, 36 => 36, 37 => 37, 38 => 38, 39 => 39, 40 => 40);
    static public $FOLLOW_type_qualifier_in_synpred33_t033backtracking550 = array(1 => 1, 4 => 4, 26 => 26, 27 => 27, 28 => 28, 29 => 29, 30 => 30, 31 => 31, 32 => 32, 33 => 33, 34 => 34, 35 => 35, 36 => 36, 37 => 37, 38 => 38, 39 => 39, 40 => 40, 45 => 45);
    static public $FOLLOW_pointer_in_synpred33_t033backtracking553 = array(1 => 1);
    static public $FOLLOW_45_in_synpred34_t033backtracking559 = array(45 => 45);
    static public $FOLLOW_pointer_in_synpred34_t033backtracking561 = array(1 => 1);


    protected $dfa1;
    protected $dfa2;
    protected $dfa3;
    protected $dfa6;
    protected $dfa4;
    protected $dfa7;
    protected $dfa9;
    protected $dfa11;
    protected $dfa13;
    protected $dfa17;
    protected $dfa15;
    protected $dfa16;
    protected $dfa18;
    protected $dfa19;


        public function __construct($input, $state = null) {
            if($state==null){
                $state = new RecognizerSharedState();
            }
            parent::__construct($input, $state);
            $this->state->ruleMemo = array();
             
            for ($i=0; $i < 49; $i++) {
                $this->state->ruleMemo[$i] = array();
            }

            $this->dfa1 = new t033backtrackingParser_DFA1($this);
            $this->dfa2 = new t033backtrackingParser_DFA2($this);
            $this->dfa3 = new t033backtrackingParser_DFA3($this);
            $this->dfa6 = new t033backtrackingParser_DFA6($this);
            $this->dfa4 = new t033backtrackingParser_DFA4($this);
            $this->dfa7 = new t033backtrackingParser_DFA7($this);
            $this->dfa9 = new t033backtrackingParser_DFA9($this);
            $this->dfa11 = new t033backtrackingParser_DFA11($this);
            $this->dfa13 = new t033backtrackingParser_DFA13($this);
            $this->dfa17 = new t033backtrackingParser_DFA17($this);
            $this->dfa15 = new t033backtrackingParser_DFA15($this);
            $this->dfa16 = new t033backtrackingParser_DFA16($this);
            $this->dfa18 = new t033backtrackingParser_DFA18($this);
            $this->dfa19 = new t033backtrackingParser_DFA19($this);
        }
        

    public function getTokenNames() { return t033backtrackingParser::$tokenNames; }
    public function getGrammarFileName() { return "runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g"; }


        public function isTypeName($name)
        {
            foreach (array_reverse($this->Symbols_stack) AS $scope) {
                if (in_array($name, $scope)) {
                    return true;
                }
            }
            return false;
        }



    // $ANTLR start "translation_unit"
    // runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g
    public function translation_unit(){
        array_push($this->Symbols_stack, $this->Symbols_scope);

        $translation_unit_StartIndex = $this->input->index();

          $this->Symbols_stack[count($this->Symbols_stack)-1]['types'] =  array();

        try {
            if ( $this->state->backtracking>0 && $this->alreadyParsedRule($this->input, 1) ) { return ; }
            // runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g
            // runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g
            {
            // runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g
            $cnt1=0;
            //loop1:
            do {
                $alt1=2;
                $alt1 = $this->dfa1->predict($this->input);
                switch ($alt1) {
            	case 1 :
            	    // runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g
            	    {
            	    $this->pushFollow(self::$FOLLOW_external_declaration_in_translation_unit75);
            	    $this->external_declaration();

            	    $this->state->_fsp--;
            	    if ($this->state->failed) return ;

            	    }
            	    break;

            	default :
            	    if ( $cnt1 >= 1 ) break 2;//loop1;
            	    if ($this->state->backtracking>0) {$this->state->failed=true; return ;}
                        $eee =
                            new EarlyExitException(1, $this->input);
                        throw $eee;
                }
                $cnt1++;
            } while (true);


            }

        }
        catch (RecognitionException $re) {
            $this->reportError($re);
            $this->recover($this->input,$re);
        }
        catch(Exception $e) {
            if ( $this->state->backtracking>0 ) { $this->memoize($this->input, 1, $translation_unit_StartIndex); }
            array_pop($this->Symbols_stack);

            throw $e;
        }
        if ( $this->state->backtracking>0 ) { $this->memoize($this->input, 1, $translation_unit_StartIndex); }
        array_pop($this->Symbols_stack);


        return ;
    }
    // $ANTLR end "translation_unit"


    // $ANTLR start "external_declaration"
    // runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g
    public function external_declaration(){
        $external_declaration_StartIndex = $this->input->index();
        try {
            if ( $this->state->backtracking>0 && $this->alreadyParsedRule($this->input, 2) ) { return ; }
            // runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g
            $alt2=2;
            $alt2 = $this->dfa2->predict($this->input);
            switch ($alt2) {
                case 1 :
                    // runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g
                    {
                    $this->pushFollow(self::$FOLLOW_function_definition_in_external_declaration111);
                    $this->function_definition();

                    $this->state->_fsp--;
                    if ($this->state->failed) return ;

                    }
                    break;
                case 2 :
                    // runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g
                    {
                    $this->pushFollow(self::$FOLLOW_declaration_in_external_declaration116);
                    $this->declaration();

                    $this->state->_fsp--;
                    if ($this->state->failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException $re) {
            $this->reportError($re);
            $this->recover($this->input,$re);
        }
        catch(Exception $e) {
            if ( $this->state->backtracking>0 ) { $this->memoize($this->input, 2, $external_declaration_StartIndex); }
            throw $e;
        }
        if ( $this->state->backtracking>0 ) { $this->memoize($this->input, 2, $external_declaration_StartIndex); }

        return ;
    }
    // $ANTLR end "external_declaration"


    // $ANTLR start "function_definition"
    // runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g
    public function function_definition(){
        array_push($this->Symbols_stack, $this->Symbols_scope);

        $function_definition_StartIndex = $this->input->index();

          $this->Symbols_stack[count($this->Symbols_stack)-1]['types'] =  array();

        try {
            if ( $this->state->backtracking>0 && $this->alreadyParsedRule($this->input, 3) ) { return ; }
            // runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g
            // runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g
            {
            // runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g
            $alt3=2;
            $alt3 = $this->dfa3->predict($this->input);
            switch ($alt3) {
                case 1 :
                    // runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g
                    {
                    $this->pushFollow(self::$FOLLOW_declaration_specifiers_in_function_definition138);
                    $this->declaration_specifiers();

                    $this->state->_fsp--;
                    if ($this->state->failed) return ;

                    }
                    break;

            }

            $this->pushFollow(self::$FOLLOW_declarator_in_function_definition141);
            $this->declarator();

            $this->state->_fsp--;
            if ($this->state->failed) return ;

            }

        }
        catch (RecognitionException $re) {
            $this->reportError($re);
            $this->recover($this->input,$re);
        }
        catch(Exception $e) {
            if ( $this->state->backtracking>0 ) { $this->memoize($this->input, 3, $function_definition_StartIndex); }
            array_pop($this->Symbols_stack);

            throw $e;
        }
        if ( $this->state->backtracking>0 ) { $this->memoize($this->input, 3, $function_definition_StartIndex); }
        array_pop($this->Symbols_stack);


        return ;
    }
    // $ANTLR end "function_definition"

    protected $declaration_scope = array(
        "isTypedef" => "",
    );
    protected $declaration_stack = array();


    // $ANTLR start "declaration"
    // runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g
    public function declaration(){
        array_push($this->declaration_stack, $this->declaration_scope);
        $declaration_StartIndex = $this->input->index();

          $this->declaration_stack[count($this->declaration_stack)-1]['isTypedef'] =  false;

        try {
            if ( $this->state->backtracking>0 && $this->alreadyParsedRule($this->input, 4) ) { return ; }
            // runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g
            $alt6=2;
            $alt6 = $this->dfa6->predict($this->input);
            switch ($alt6) {
                case 1 :
                    // runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g
                    {
                    $this->match($this->input,$this->getToken('23'),self::$FOLLOW_23_in_declaration164); if ($this->state->failed) return ;
                    // runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g
                    $alt4=2;
                    $alt4 = $this->dfa4->predict($this->input);
                    switch ($alt4) {
                        case 1 :
                            // runtime/Php/test/Antlr/Tests/grammers/t033backtracking.g
                            {
                            $this->pushFollow(self::$FOLLOW_declaration_specifiers_in_declaration166);
                            $this->declaration_specifiers();

                            $this->state->_fsp--;
                            if ($this->state->failed) return ;

                            }
                            break;

                    }

                    if ( $this->state->backtracking==0 ) {
                      $this->declaration_stack[count($this->declaration_stack)-1]['isTypedef'] =  true;
                    }
                    $this->pushFollow(self::$FOLLOW_init_declarator_list_in_declaration174);
                    $this->init_declarator_list();
